[MSS-435] OB Redesign -  Footer-- fix on IE.

--- a/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/components/_footer.scss
+++ b/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/components/_footer.scss
@@ -90,6 +90,17 @@
                 }
             }
         }
+
+        .selector-wrapper {
+        
+            @include media-breakpoint-down(md) {
+                margin-right: rem(-70);
+            }
+            @include media-breakpoint-down(sm) {
+                margin-right: rem(0);
+            }
+
+        }
     
         .footer-item {
     
@@ -217,6 +228,8 @@
                     .flag-icon {
                         width: rem(28);
                         height: rem(20);
+                        min-width: rem(28);
+                        min-height: rem(20);
                     }
     
                     select {
